--- a/contracts/unstoppable/certora/conf/fee-received-after-grace.conf
+++ b/contracts/unstoppable/certora/conf/fee-received-after-grace.conf
@@ -1,11 +1,12 @@
 { 
     "files": [
         "versions/UnstoppableVault_v1.sol:UnstoppableVault",
-        "versions/UnstoppableMonitor_v1.sol:UnstoppableMonitor",
+        "versions/UnstoppableMonitor_v2.sol:UnstoppableMonitor",
         "versions/utils/DamnValuableToken.sol:DamnValuableToken",
     ],
     "verify": "UnstoppableVault:certora/fee-received-after-grace.spec",
     "link": [
-        "UnstoppableVault:asset=DamnValuableToken"
+        "UnstoppableVault:asset=DamnValuableToken",
+        "UnstoppableMonitor:vault=UnstoppableVault"
     ]
 }
